tests/NormalTests/paczka1/small_fuzzy/80997213.err
Error in line 2: A223 S909 94,0
Error in line 9: MeLrH S417 68,8
Error in line 10: MeLrH A166 11,4
Error in line 15: MeLrH S417 -1,2
